# Stratos-2

./: README.md  cargo.toml
kernel/: Cargo.toml
kernel/kernel/src/: boot_splash.rs  font.rs  history.rs  interrupts.rs  keyboard.rs  main.rs  thud.rs  timer.rs
kernel/src/: boot_splash.rs  commands.rs  console.rs  font2.rs  font3.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  pic.rs  serial.rs  theme_presets.rs  thud.rs  time.rs  timer.rs  wait.rs
kernel/src/thudmodules/: min.rs  tin.rs  utin.rs
os/: Cargo.toml  build.rs
os/src/: main.rs
