[package]
name = "kernel"
version = "0.15.6"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
spin = "0.9"
x86_64 = "0.14"
pc-keyboard = "0.7"
heapless = { version = "0.8", default-features = false }
x86 = "0.52.0"
linked_list_allocator = "0.10"
lazy_static = { version = "1", features = ["spin_no_std"] }
raw-cpuid = "10"
uart_16550 = "0.2"
libm = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
log = []